adding go version

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.12.0a7-slim-bullseye
-MAINTAINER rush@ru8733.com
+LABEL maintainer="rush@ru8733.com"
 
 ADD code /code
 RUN pip install -r /code/pip-requirements.txt
