updating Dockerfile to cleanup cache and bumping Debian version

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,8 +1,10 @@
-FROM python:3.12.0b1-slim-bullseye
+FROM python:3.12.0b4-slim-bookworm
 LABEL maintainer="rush@ru8733.com"
 
 ADD . /code
-RUN pip install -r /code/pip-requirements.txt
+RUN pip install -r /code/pip-requirements.txt && \
+  apt-get autoclean && \
+  rm -rf /var/lib/apt/lists/*
 
 WORKDIR /code
 ENV PYTHONPATH '/code/'
